syntax = "proto3";

import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.example.model.movie";

message MovieDto {
  string title = 1;
  int32 year = 2;
  double rating = 3;
}

// Based on the genre, we would be returning a list of movies
message MovieSearchRequest {
  common.Genre genre = 1;
}

message MovieSearchResponse {
  repeated MovieDto movie = 1;
}

service MovieService {
  rpc getMovies(MovieSearchRequest) returns (MovieSearchResponse);
}
